# extreme-weather-bench-paper

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml
notebooks/: ar_figures.ipynb  craven_sigsvr_us_canada_nonevents.ipynb  doe_figure1.ipynb  figure1.ipynb  figure2.ipynb  figure3.ipynb  figure3_old.ipynb  figure4.ipynb  figure5.ipynb  heat_figures.ipynb  nature_review_figure4.ipynb  severe-non-events.txt  severe_cbss_plots.ipynb  severe_figures.ipynb  tc_figures.ipynb
saved_data/: fourv2_severe_results.pkl
src/data/: aifs_util.py  ar_forecast_setup.py  arraylake_utils.py  check_icechunk.py  heat_freeze_forecast_setup.py  marginal_forecast_setup.py  model_name_setup.py  run.py  run_aifs_eval.py  run_ar_cases.py  run_freeze_cases.py  run_heat_cases.py  run_marginal_temp.py  run_non_event_severe.py  run_severe_cases.py  run_tc_cases.py  severe_forecast_setup.py  tc_forecast_setup.py  test_hans.py  util.py
src/ewb_paper/: __init__.py  config.py
src/ewb_paper/data/: heat_freeze_forecast_setup.py  run_ar_cases.py  run_freeze_cases.py  run_heat_cases.py  run_severe_cases.py  run_tc_cases.py  severe_forecast_setup.py
src/ewb_paper/plots/: atmospheric_river_utils.py  compute_ar_plot_data.py  compute_cbss_pph_examples.py  results_utils.py
src/notebooks/: figure1.ipynb
src/plots/: ar_figures.ipynb  atmospheric_river_utils.py  compute_ar_data.py  compute_ar_plot_data.py  compute_cbss_pph_examples.py  compute_tc_tracks.py  figure1.ipynb  figure2.ipynb  figure3.ipynb  figure4.ipynb  figure5_tc_tracks.py  heat_figures.ipynb  heat_freeze_6panel.py  heat_freeze_utils.py  paper_plotting.py  plot_all_ar.py  plot_all_cbss_pph.py  plot_global_ar_era5.py  plotting_styles.py  plotting_utils.py  results_utils.py  severe_cbss_plots.ipynb  severe_convection_utils.py  severe_figures.ipynb  tc_3x4_panel.py  tc_figures.ipynb  tc_utils.py
