[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extreme-weather-bench-paper"
version = "0.1.0"
description = "Code for graphics used in the EWB paper"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = { find = {} }

